@@ -19,6 +19,7 @@
 ## This file contains various components for the 'dynamics_diagnostics' options
 
 from pyfmi.fmi import FMUModelME2
+import numbers
 
 DIAGNOSTICS_PREFIX = '@Diagnostics.'
 
@@ -62,6 +63,8 @@ def setup_diagnostics_variables(model, start_time, options, solver_options):
             atol = solver_options.get('atol', None)
             if (rtol is None) or (atol is None):
                 rtol, atol = model.get_tolerances()
+            if isinstance(atol, numbers.Number): # is atol is scalar, convert to list
+                atol = [atol]*len(states_list)
                 
             _diagnostics_params[f"{DIAGNOSTICS_PREFIX}solver.relative_tolerance"] = (rtol, "Relative solver tolerance.")
 
