@@ -1,6 +1,7 @@
 --- CHANGELOG ---
 --- PyFMI-FUTURE ---
     * Increased robustness of getting the `supports` attribute from ResultHandlers.
+    * Fixed an Exception when using `dynamic_diagnostics` and scalar `atol`.
 
 --- PyFMI-2.16.1 ---
     * Fixed an issue with `get_variables_data` returning full trajectories when mixed with `get_variable_data` calls.
